fix: styles on mobile drawer
corrected styles on moible drawer search bar and menu

--- a/styles/css/search/vtex.store-components.css
+++ b/styles/css/search/vtex.store-components.css
@@ -22,17 +22,26 @@
 }
 
 @media screen and (max-width: 1025px) {
+  .searchBarInnerContainer--header__search-bar {
+    padding: 0;
+  }
+
   .searchBarInnerContainer--header__search-bar :global(.vtex-input-prefix__group) {
     background-color: rgba(0, 0, 0, .03);
+    border          : 1px solid #ddd;
+    height          : 2.507em;
+    font-size       : .97em;
   }
 
   .searchBarInnerContainer--header__search-bar :global(.vtex-styleguide-9-x-input),
   .searchBarInnerContainer--header__search-bar :global(.vtex-input__suffix),
   .searchBarIcon--header__search-bar {
-    background-color: rgba(0, 0, 0, .03);
-    box-shadow      : none;
+    background-color: rgba(0, 0, 0, .0);
     border-color    : rgba(0, 0, 0, .09);
-    color           : currentColor !important;
-    border-radius   : 99px;
+    color           : #ccc;
+  }
+
+  .searchBarInnerContainer--header__search-bar :global(.vtex-styleguide-9-x-input)::placeholder {
+    color: #ccc;
   }
 }
